front page done

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
 							<li><a href="#programs">Mushroom Menu</a></li>
 							<li><a href="#testimonials">Testimonials</a></li>
 							<li><a href="#team">Team</a></li>
+							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</li>
 					<li><a href="/workshops" id="workshops-url">Workshops</a></li>
@@ -88,7 +89,6 @@
 					<div class="col-lg-12 text-center">
 						<h1>Mushroom Learning</h1>
 						<p class="lead">We teach code.</p>
-						<a href="/workshops">dumb thing won't work</a>
 					</div>
 				</div>
 			</div>
@@ -194,7 +194,7 @@
 						</div>
 						<br class="spacer-lg">
 					</div>
-				</div><!-- /.row <--></-->
+				</div><!-- /.row <-->
 			</div><!-- /.container -->
 		</section>	
 
@@ -204,28 +204,28 @@
 				<div class="row">
 					<div class="col-lg-12 text-center">
 						<h1>Testimonials</h1>
-						<p class="lead">Yeah yeah yeah</p>
+						<p class="lead">Who doesn't like a fungi?</p>
 					</div>
 					<div class="col-lg-4">
 						<blockquote class="testimonial"> 
-							<p>You don’t need to see his identification. These aren’t the droids you’re looking for. He can go about his business. Move along.</p> 
+							<p>Mushroom Learning's program was super fun! I got to build a website from nothing. Being able to create something on my own was really cool.</p> 
 						</blockquote> 
 						<div class="arrow-down"></div> 
-						<p class="testimonial-author">Obi-Wan Kenobi | <span>Jedi Master</span></p>
+						<p class="testimonial-author">Sara M. | <span>Student</span></p>
 					</div>
 					<div class="col-lg-4">
 						<blockquote class="testimonial"> 
-							<p>You don’t need to see his identification. These aren’t the droids you’re looking for. He can go about his business. Move along.</p> 
+							<p>Coding is an extremely useful and in demand skill today. I have been looking for a good option for my son  and was lucky to have found such a knowledgable and caring group of people. My son was able to get a great deal of personal attention and his final project was spectacular!</p> 
 						</blockquote> 
 						<div class="arrow-down"></div> 
-						<p class="testimonial-author">Obi-Wan Kenobi | <span>Jedi Master</span></p>
+						<p class="testimonial-author">Brogan B. | <span>Parent</span></p>
 					</div>
 					<div class="col-lg-4">
 						<blockquote class="testimonial"> 
-							<p>You don’t need to see his identification. These aren’t the droids you’re looking for. He can go about his business. Move along.</p> 
+							<p>My daughter came home excited for their next session. She thought Muhammad was extremely friendly and helpful. I couldn't be happier with this decision!</p> 
 						</blockquote> 
 						<div class="arrow-down"></div> 
-						<p class="testimonial-author">Obi-Wan Kenobi | <span>Jedi Master</span></p>
+						<p class="testimonial-author">Ross C. | <span>Parent</span></p>
 					</div><!-- /.col-gl-12 -->
 				</div><!-- /.row -->
 			</div><!-- /.container -->
@@ -235,8 +235,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12 text-center">
-						<h1>This Our Team</h1>
-						<p class="lead">You bet we are pretty proud</p>
+						<h1>Founding Team</h1>
 					</div>
 					<div class="col-lg-12">
 						<!--Team Members-->
@@ -246,14 +245,7 @@
 									<img class="img-circle" src="assets/images/mike.jpg" alt="">
 									<div class="caption">
 										<h4>Michael</h4>
-										<p class="ribbon">Ugly Duckling</p>
 										<p>Michael brings a passion for education and years of experience in the educational technology space beginning at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a> and most recently at <a href="http://www.edlio.com" target="_blank">Edlio</a>. He is excited to be a part of a great team and help make education accessible to all.</p>
-										<ul class="social-profiles">
-											<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-											<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-											<li><a class="google-plus" href="#"><i class="icon-google-plus"></i></a></li>
-											<li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
-										</ul>
 									</div>
 								</div>
 							</li>
@@ -262,14 +254,7 @@
 									<img class="img-circle" src="assets/images/muhammad.jpg" alt="">
 									<div class="caption">
 										<h4>Muhammad</h4>
-										<p class="ribbon">Swan</p>
 										<p>A former Teen Jeopardy! semi-finalist, Muhammad has been involved with technology and education in many ways. He was previously a product manager and mentor at <a href="http://www.revolutionprep.com" target="_blank">Revolution Prep</a>, a developer at <a href="http://www.fullscreen.net" target="_blank">Fullscreen</a>, and most recently helped <a href="http://www.makersquare.com" target="_blank">MakerSquare</a> design curriculum for kids.</p>
-										<ul class="social-profiles">
-											<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-											<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-											<li><a class="google-plus" href="#"><i class="icon-google-plus"></i></a></li>
-											<li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
-										</ul>
 									</div>
 								</div>
 							</li>
@@ -279,114 +264,51 @@
 			</div><!-- /.container -->
 		</section>
 
-		<!-- contact -->
-		<section class="wrapper-lg bg-alt" id="contact">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<h2>Contact Us</h2>
-						<p class="lead">You can reach us any time</p>
-						<div class="well">
-							<address>
-								<strong>Aventador Industries</strong><hr>
-								795 Folsom Ave, Suite 600<br>
-								San Francisco, CA 94107<br>
-								<abbr title="Telephone Number">Tel.:</abbr> (123) 456-7890br<br>
-								<a href="mailto:#">info@graphikaria.com</a><hr>
-							</address>
-							<p>We are open monday through friday from 8:00 am to 6:00 pm and saturdays from 10:00 am to 4:00 pm we'll be glad to have you here.</p>
-						</div>
-					</div>
-					<div class="col-md-8">
-						<form role="form">
-							<fieldset>
-								<div class="form-group">
-									<label class="hidden" for="name">Name:</label>
-									<input class="form-control" type="text" id="name" placeholder="Name">
-								</div>
-								<div class="form-group">
-									<label class="hidden" for="email">Email:</label>
-									<input class="form-control" type="email" id="email" placeholder="Email">
-								</div>
-								<div class="form-group">
-									<label class="hidden" for="company">Company:</label>
-									<input class="form-control" type="text" id="company" placeholder="Company">
-								</div>
-								<div class="form-group">
-									<label class="hidden" for="comment">Comment:</label>
-									<textarea class="form-control" rows="7" id="comment" placeholder="Your comments..."></textarea>
-								</div>
-								<label class="checkbox">
-									<input type="checkbox"> CC to myself
-								</label>
-								<button type="submit" class="btn btn-large btn-primary">Send Now <i class="icon-chevron-sign-right"></i></button>
-							</fieldset>
-						</form>
-					</div>
-				</div>
-			</div>
-		</section>
 	</section>
 
+	<section class="wrapper-lg bg-alt" id="contact">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<img src="assets/images/logo-transparent-small.png" alt="" class="contact-image">
+					</div>
+					<div class="col-lg-6 col-lg-offset-3 text-center">
+						<p class="lead">Questions? Contact us! (424) 244-9794</p>
+						<p class="lead">Monday-Friday, 9:00am-6:00pm PST</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-6 col-lg-offset-3 text-center">
+						<a class="typeform-share link contact-us-link" href="https://mushroomlearning.typeform.com/to/g6IqRe" data-mode="2" target="_blank">Or click here!</a>
+						<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+					</div>
+				</div>
+			</div><!-- /.container -->
+		</section>
 
 	<!-- Footer -->
 	<footer class="bg-alt">
 		<div class="wrapper-sm footer-main">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-6 col-md-3">
-						<h3>External Sources</h3>
-						<ul class="list-unstyled">
-							<li><i class="icon-ok"></i> <a href="#">Website Network</a></li>
-							<li><i class="icon-ok"></i> <a href="#">Watch Live Events</a></li>
-							<li><i class="icon-ok"></i> <a href="#">Brand Solutions</a></li>
-							<li><i class="icon-ok"></i> <a href="#">Strategy &amp; Branding</a></li>
-							<li><i class="icon-ok"></i> <a href="#">Plans &amp; Pricing</a></li>
-						</ul>
-					</div>
-					<div class="col-sm-6 col-md-3">
-						<h3>Event Photos</h3>
-						<ul class="stream-img">
-							<li><a href="#"><img src="assets/images/flickr_1.jpg" alt=""></a></li>
-							<li><a href="#"><img src="assets/images/flickr_2.jpg" alt=""></a></li>
-							<li><a href="#"><img src="assets/images/flickr_3.jpg" alt=""></a></li>
-							<li><a href="#"><img src="assets/images/flickr_4.jpg" alt=""></a></li>
-							<li><a href="#"><img src="assets/images/flickr_5.jpg" alt=""></a></li>
-							<li><a href="#"><img src="assets/images/flickr_6.jpg" alt=""></a></li>
-							<li><a href="#"><img src="assets/images/flickr_7.jpg" alt=""></a></li>
-							<li><a href="#"><img src="assets/images/flickr_8.jpg" alt=""></a></li>
-						</ul>
-					</div>
-					<div class="col-sm-6 col-md-3">
+					<div class="col-sm-3 col-md-3 col-sm-offset-3 col-md-3" style="margin-left: 32%;">
 						<h3>Quick Contact</h3>
 						<ul class="list-unstyled">
-							<li><i class="icon-angle-right"></i> <a href="#">9am-6pm ET Mon-Fri</a></li>
-							<li><i class="icon-angle-right"></i> <a href="#">US (877) 977-8732</a></li>
-							<li><i class="icon-angle-right"></i> <a href="#">International +1 646 490 1679</a></li>
+							<li><i class="icon-angle-right"></i> 9am-6pm PST Mon-Fri</li>
+							<li><i class="icon-angle-right"></i> US (424) 244-9794</li>
 						</ul>
 					</div>
-					<div class="col-sm-6 col-md-3">
+					<div class="col-sm-3 col-md-3">
 						<h3>Follow Us</h3>
 						<ul class="social-profiles">
-							<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-							<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-							<li><a class="google-plus" href="#"><i class="icon-google-plus"></i></a></li>
-							<li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
+							<li><a class="twitter" href="http://twitter.com/MushroomK12"><i class="icon-twitter"></i></a></li>
+							<li><a class="facebook" href="https://www.facebook.com/MushroomK12"><i class="icon-facebook"></i></a></li>
 						</ul>
-						<p>We are friendly. Give us a ding!</p>
 					</div>
 				</div>
 			</div>
 		</div>
-		<div class="wrapper-sm footer-bottom">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<p>All Rights Reserved ® Designed by <a href="http://twitter.com/heyallanmoreno" target="_blank">@heyallanmoreno</a></p>
-					</div>
-				</div>
-			</div>
-		</div>
+		
 	</footer>
 
 	<!-- last but not least the javascript -->
@@ -414,7 +336,7 @@
 
     $(document).ready(function() {
       $("#classes-url").click(function(){
-         $("#temp-highlight").delay(1200).effect("highlight");
+         $("#temp-highlight").delay(1200).effect("highlight", {}, 2000);
       });
    });
 
