finishing tutoring section

--- a/public/tutoring.html
+++ b/public/tutoring.html
@@ -43,16 +43,15 @@
         <ul class="nav navbar-nav">
           <li><a href="/" id="home-url">Home</a></li>
           <li><a href="/workshops" id="workshops-url">Workshops</a></li>
+          <li><a href="#programs" id="classes-url">Classes</a></li>
+          <li><a href="#programs" id="summer-camp-url">Summer Camp</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">Summer Camp <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">Tutoring <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#sample-day">Sample Day</a></li>
               <li><a href="#pricing">Pricing</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </li>
-          <li><a href="#programs" id="classes-url">Classes</a></li>
-          <li><a href="/tutoring" id="tutoring-url">Tutoring</a></li>
           <li><a href="/faq" id="faq-url">FAQ</a></li>
         </ul>
       </div>
@@ -63,80 +62,32 @@
   <section class="wrapper-lg" id="about">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-6 col-lg-offset-3 text-center">
           <h1>Mushroom Learning</h1>
-          <p class="lead">Summer Camp Details</p>
+          <p class="lead">Highly intelligent and highly trained, our tutors are selected not just for their coding experience, but also their ability to teach and communicate effectively.</p>
         </div>
       </div>
     </div>
-  </section>
-
-  <!-- Sample Day -->
-  <section class="wrapper-lg bg-alt" id="sample-day">
-    <div class="container">
-      <div class="row text-center h2-resize">
-        <h2>Sample Day</h2>
-      </div>
-      <div class="row">
-        <div id="sample-day-carousel">
-          <div class="item"><img src="assets/images/check-in.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/review.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/robot.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/coding-languages-am.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/healthy-break-am.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/digital-design.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/linguistics-activity.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/review-activity.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/lunch-and-yoga.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/innovation-challenge.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/coding-languages-pm.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/healthy-break-pm.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/artificial-intelligence-activity.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/progress-check.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/pick-up.png" alt="Owl Image"></div>
-          <div class="item"><img src="assets/images/optional-study-hall.png" alt="Owl Image"></div>
-        </div>
-      </div>
-    </div>
-
   </section>
 
   <!-- Pricing -->
-  <section class="wrapper-lg" id="pricing">
+  <section class="wrapper-lg bg-alt" id="pricing">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center h2-resize">
-          <h2>Coding Camp Details</h2>
+          <h2>Pricing</h2>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
           <div class="plan">
             <div class="plan-name">
-              <h3>Location</h3>
+              <h3>10-hour package</h3>
             </div>
             <div class="plan-info">
             </div>
             <div class="plan-price">
-            </div>
-            <ul class="plan-features box-text">
-              <li> 
-                <p>The City School</p>
-                <p>11625 West Pico Blvd</p>
-                <p>Los Angeles, CA 90064</p>
-              </li>
-            </ul>
-          </div><!-- /.plan -->
-        </div>
-        <div class="col-md-4">
-          <div class="plan plan-featured">
-            <div class="plan-name">
-              <h3>Pricing</h3>
-            </div>
-            <div class="plan-info">
-            </div>
-            <div class="plan-price">
-              <h1>$349 <small>/week</small></h1>
+              <h1>$799</h1>
             </div>
             <ul class="plan-features">
               <li><i class="icon-ok"></i> Full day option</li>
@@ -153,25 +104,52 @@
         <div class="col-md-4">
           <div class="plan">
             <div class="plan-name">
-              <h3>Dates</h3>
+              <h3>20-hour package</h3>
             </div>
             <div class="plan-info">
             </div>
             <div class="plan-price">
+              <h1>$1399</h1>
             </div>
-            <ul class="plan-features box-text">
-              <li>July 21st - July 25th</li>
-              <li>July 28th - August 1st</li>
-              <li>August 4th - August 8th</li>
+            <ul class="plan-features">
+              <li><i class="icon-ok"></i> Full day option</li>
+              <li><i class="icon-ok"></i> Complete approach</li>
+              <li><i class="icon-ok"></i> Lunch and Yoga included</li>
+              <li><i class="icon-ok"></i> Optional after class study hall ($10/day)</li>
             </ul>
-            
+            <div class="plan-cta">
+              <br class="spacer-md">
+              <a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
+            </div>
+          </div><!-- /.plan -->
+        </div>
+        <div class="col-md-4">
+          <div class="plan plan-featured">
+            <div class="plan-name">
+              <h3>40-hour package</h3>
+            </div>
+            <div class="plan-info">
+            </div>
+            <div class="plan-price">
+              <h1>$2399</h1>
+            </div>
+            <ul class="plan-features">
+              <li><i class="icon-ok"></i> Full day option</li>
+              <li><i class="icon-ok"></i> Complete approach</li>
+              <li><i class="icon-ok"></i> Lunch and Yoga included</li>
+              <li><i class="icon-ok"></i> Optional after class study hall ($10/day)</li>
+            </ul>
+            <div class="plan-cta">
+              <br class="spacer-md">
+              <a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
+            </div>
           </div><!-- /.plan -->
         </div>
       </div>
     </div>
   </section>
 
-    <section class="wrapper-lg bg-alt" id="contact">
+    <section class="wrapper-lg" id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -227,68 +205,7 @@
   <script src="assets/fancybox/jquery.easing-1.3.pack.js"></script>
   <script src="assets/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
   <script src="assets/js/jquery.isotope.min.js"></script>
-  <script src="assets/js/owl-carousel/owl.carousel.js"></script>
   <script>
-    // Owl carousel stuff
-    $(document).ready(function(){
-      $("#sample-day-carousel").owlCarousel({
-        autoPlay: 3000, //Set AutoPlay to 3 seconds
-        items : 2,
-        itemsDesktop : [1199,3],
-        itemsDesktopSmall : [979,3]
-      });
-      // Bootstrap tooltips
-      $('[data-toggle="tooltip"]').tooltip();
-      // Fancybox galllery
-      $('[data-type="fancybox-item"]').fancybox({
-        'transitionIn'  :   'elastic',
-        'transitionOut' :   'elastic',
-        'speedIn'       :   600, 
-        'speedOut'      :   200, 
-        'overlayShow'   :   true
-      });
-      // initialize Isotope inside $(window).load() instead of $(document).ready()
-      // because Isotope needs to measure media size to avoid overlapping
-      $(window).load(function(){
-        // isotope filter setup
-        var $container = $('#portfolio-container');
-        $container.isotope({
-          filter: "*",
-          animationOptions: {
-            duration: 750,
-            easing: 'linear',
-            queue: false,
-          }
-        });
-        // isotope filter button
-        $("#filters a").click(function(){
-          var selector = $(this).attr('data-filter');
-          $container.isotope({ 
-            filter: selector,
-            animationOptions: {
-              duration: 750,
-              easing: 'linear',
-              queue: false,
-            }
-          });
-          return false;
-        });
-        // filter behavior
-        var $optionSets = $('#filters'),
-        $optionLinks = $optionSets.find('a');
-        $optionLinks.click(function(){
-          var $this = $(this);
-          // don't proceed if already selected
-          if ( $this.hasClass('active') ) {
-            return false;
-          }
-          // add active class to selected filter tag
-          var $optionSet = $this.parents('#filters');
-          $optionSet.find('.active').removeClass('active');
-          $this.addClass('active');
-        });
-      });
-    });
 
     $('#workshops-url').click(function(){
        window.location.href='/workshops';
@@ -304,12 +221,11 @@
        window.location.href='/faq';
     })
 
-    $('#tutoring-url').click(function(){
-       window.location.href='/tutoring';
-    })
-
     $('#classes-url').click(function(){
        window.location.href='/#programs';
+    })
+    $('#summer-camp-url').click(function(){
+       window.location.href='/summer-camp';
     })
 
   </script>
