--- a/public/workshops.html
+++ b/public/workshops.html
@@ -28,33 +28,24 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
           <img src="assets/images/logo.png" alt="">
         </a>
       </div>
       <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
         <ul class="nav navbar-nav">
+          <li><a href="/" id="home-url">Home</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">Home <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle nav-bar-highlight" data-toggle="dropdown">Workshops <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#about">About</a></li>
-              <li><a href="#programs">Coding Programs</a></li>
-              <li><a href="#testimonials">Testimonials</a></li>
-              <li><a href="#team">Team</a></li>
+              <li><a href="#pricing">About</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Home <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#about">About</a></li>
-              <li><a href="#programs">Coding Programs</a></li>
-              <li><a href="#testimonials">Testimonials</a></li>
-              <li><a href="#team">Team</a></li>
-            </ul>
-          </li>
-          <li><a href="/faq">Workshops</a></li>
-          <li><a href="/summer-camp">Summer Camp</a></li>
-          <li><a href="/faq">FAQ</a></li>
+          <li><a href="/summer-camp" id="summer-camp-url">Summer Camp</a></li>
+          <li><a href="#programs" id="classes-url">Classes</a></li>
+          <li><a href="/tutoring" id="tutoring-url">Tutoring</a></li>
+          <li><a href="/faq" id="faq-url">FAQ</a></li>
         </ul>
       </div>
     </div>
@@ -66,7 +57,7 @@
       <div class="row">
         <div class="col-lg-6 col-lg-offset-3 text-center">
           <h1>Mushroom Learning</h1>
-          <p class="lead">By the end of our 1-hour workshop, they will understand the building blocks of an environment they spend a lot of time in -- a website. </p>
+          <p class="lead">Hosted in Mushroom Learning's unique learning environment, the workshop will give students an introduction into how websites are made, and the many languages that build the framework of the internet.</p>
         </div>
       </div>
     </div>
@@ -146,64 +137,49 @@
     </div>
   </section>
 
+    <section class="wrapper-lg" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <img src="assets/images/logo-transparent-small.png" alt="" class="contact-image">
+          </div>
+          <div class="col-lg-6 col-lg-offset-3 text-center">
+            <p class="lead">Questions? Contact us! (424) 244-9794</p>
+            <p class="lead">Monday-Friday, 9:00am-6:00pm PST</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-lg-offset-3 text-center">
+            <a class="typeform-share link contact-us-link" href="https://mushroomlearning.typeform.com/to/g6IqRe" data-mode="2" target="_blank">Or click here!</a>
+            <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+          </div>
+        </div>
+      </div><!-- /.container -->
+    </section>
+
   <!-- Footer -->
   <footer class="bg-alt">
     <div class="wrapper-sm footer-main">
       <div class="container">
         <div class="row">
-          <div class="col-sm-6 col-md-3">
-            <h3>External Sources</h3>
-            <ul class="list-unstyled">
-              <li><i class="icon-ok"></i> <a href="#">Website Network</a></li>
-              <li><i class="icon-ok"></i> <a href="#">Watch Live Events</a></li>
-              <li><i class="icon-ok"></i> <a href="#">Brand Solutions</a></li>
-              <li><i class="icon-ok"></i> <a href="#">Strategy &amp; Branding</a></li>
-              <li><i class="icon-ok"></i> <a href="#">Plans &amp; Pricing</a></li>
-            </ul>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <h3>Event Photos</h3>
-            <ul class="stream-img">
-              <li><a href="#"><img src="assets/images/flickr_1.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/flickr_2.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/flickr_3.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/flickr_4.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/flickr_5.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/flickr_6.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/flickr_7.jpg" alt=""></a></li>
-              <li><a href="#"><img src="assets/images/flickr_8.jpg" alt=""></a></li>
-            </ul>
-          </div>
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-3 col-md-3 col-sm-offset-3 col-md-3" style="margin-left: 32%;">
             <h3>Quick Contact</h3>
             <ul class="list-unstyled">
-              <li><i class="icon-angle-right"></i> <a href="#">9am-6pm ET Mon-Fri</a></li>
-              <li><i class="icon-angle-right"></i> <a href="#">US (877) 977-8732</a></li>
-              <li><i class="icon-angle-right"></i> <a href="#">International +1 646 490 1679</a></li>
+              <li><i class="icon-angle-right"></i> 9am-6pm PST Mon-Fri</li>
+              <li><i class="icon-angle-right"></i> US (424) 244-9794</li>
             </ul>
           </div>
-          <div class="col-sm-6 col-md-3">
+          <div class="col-sm-3 col-md-3">
             <h3>Follow Us</h3>
             <ul class="social-profiles">
-              <li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-              <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-              <li><a class="google-plus" href="#"><i class="icon-google-plus"></i></a></li>
-              <li><a class="pinterest" href="#"><i class="icon-pinterest"></i></a></li>
+              <li><a class="twitter" href="http://twitter.com/MushroomK12"><i class="icon-twitter"></i></a></li>
+              <li><a class="facebook" href="https://www.facebook.com/MushroomK12"><i class="icon-facebook"></i></a></li>
             </ul>
-            <p>We are friendly. Give us a ding!</p>
           </div>
         </div>
       </div>
     </div>
-    <div class="wrapper-sm footer-bottom">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <p>All Rights Reserved ® Designed by <a href="http://twitter.com/heyallanmoreno" target="_blank">@heyallanmoreno</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
+    
   </footer>
 
   <!-- last but not least the javascript -->
@@ -271,6 +247,24 @@
         });
       });
     });
+
+    $('#home-url').click(function(){
+       window.location.href='/';
+    })
+    $('#summer-camp-url').click(function(){
+       window.location.href='/summer-camp';
+    })
+    $('#faq-url').click(function(){
+       window.location.href='/faq';
+    })
+    $('#classes-url').click(function(){
+       window.location.href='/#programs';
+    })
+
+    $('#tutoring-url').click(function(){
+       window.location.href='/tutoring';
+    })
+
   </script>
 </body>
 </html>
