--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,6 @@
 </head>
 
 <body id="home">
-
-
-
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container">
 			<div class="navbar-header">
@@ -31,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/workshops">
+				<a class="navbar-brand" href="/">
 					<img src="assets/images/logo.png" alt="">
 				</a>
 			</div>
@@ -50,6 +47,7 @@
 					<li><a href="/workshops" id="workshops-url">Workshops</a></li>
 					<li><a href="/summer-camp" id="summer-camp-url">Summer Camp</a></li>
 					<li><a href="#programs" id="classes-url">Classes</a></li>
+					<li><a href="/tutoring" id="tutoring-url">Tutoring</a></li>
 					<li><a href="/faq" id="faq-url">FAQ</a></li>
 				</ul>
 			</div>
@@ -332,6 +330,9 @@
 		})
 		$('#faq-url').click(function(){
 		   window.location.href='/faq';
+		})
+		$('#tutoring-url').click(function(){
+		   window.location.href='/tutoring';
 		})
 
     $(document).ready(function() {
