ready for deploy

--- a/public/tutoring.html
+++ b/public/tutoring.html
@@ -65,6 +65,7 @@
         <div class="col-lg-6 col-lg-offset-3 text-center">
           <h1>Mushroom Learning</h1>
           <p class="lead">Highly intelligent and highly trained, our tutors are selected not just for their coding experience, but also their ability to teach and communicate effectively.</p>
+          <p class="lead">Students are matched with tutors based on topic of interest and personality. We have tutors for all levels of computer science.</p>
         </div>
       </div>
     </div>
@@ -90,15 +91,10 @@
               <h1>$799</h1>
             </div>
             <ul class="plan-features">
-              <li><i class="icon-ok"></i> Full day option</li>
-              <li><i class="icon-ok"></i> Complete approach</li>
-              <li><i class="icon-ok"></i> Lunch and Yoga included</li>
-              <li><i class="icon-ok"></i> Optional after class study hall ($10/day)</li>
+              <li><i class="icon-ok"></i> Learn the fundamentals</li>
+              <li><i class="icon-ok"></i> Design and build a simple web project</li>
+              <li><i class="icon-ok"></i> Access to moderated forums</li>
             </ul>
-            <div class="plan-cta">
-              <br class="spacer-md">
-              <a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
-            </div>
           </div><!-- /.plan -->
         </div>
         <div class="col-md-4">
@@ -112,14 +108,14 @@
               <h1>$1399</h1>
             </div>
             <ul class="plan-features">
-              <li><i class="icon-ok"></i> Full day option</li>
-              <li><i class="icon-ok"></i> Complete approach</li>
-              <li><i class="icon-ok"></i> Lunch and Yoga included</li>
-              <li><i class="icon-ok"></i> Optional after class study hall ($10/day)</li>
+              <li><i class="icon-ok"></i> Dive deeper into web development topics</li>
+              <li><i class="icon-ok"></i> Design and build an advanced web project</li>
+              <li><i class="icon-ok"></i> Access to moderated forums</li>
+              <li><i class="icon-ok"></i> Exposure to back end languages</li>
             </ul>
             <div class="plan-cta">
               <br class="spacer-md">
-              <a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
+              <p class="lead">Call (424) 244-9794 <br>to talk about tutoring</p>
             </div>
           </div><!-- /.plan -->
         </div>
@@ -134,15 +130,11 @@
               <h1>$2399</h1>
             </div>
             <ul class="plan-features">
-              <li><i class="icon-ok"></i> Full day option</li>
-              <li><i class="icon-ok"></i> Complete approach</li>
-              <li><i class="icon-ok"></i> Lunch and Yoga included</li>
-              <li><i class="icon-ok"></i> Optional after class study hall ($10/day)</li>
+              <li><i class="icon-ok"></i> Dig into the industry established frameworks</li>
+              <li><i class="icon-ok"></i> Work on multiple projects</li>
+              <li><i class="icon-ok"></i> Access to moderated forums</li>
+              <li><i class="icon-ok"></i> Work with Git and from the command line</li>
             </ul>
-            <div class="plan-cta">
-              <br class="spacer-md">
-              <a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
-            </div>
           </div><!-- /.plan -->
         </div>
       </div>
