linking to bit.ly's

--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -146,7 +146,7 @@
             </ul>
             <div class="plan-cta">
               <br class="spacer-md">
-              <a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
+              <a href="http://bit.ly/coding-la" class="btn btn-primary btn-large" target="_blank">Sign up! &raquo;</a>
             </div>
           </div><!-- /.plan -->
         </div>
