--- a/public/workshops.html
+++ b/public/workshops.html
@@ -90,7 +90,7 @@
             </ul>
             <div class="plan-cta">
               <br class="spacer-md">
-              <a href="#" class="btn btn-primary btn-large">Get it now! &raquo;</a>
+              <a href="http://bit.ly/coding-workshop" class="btn btn-primary btn-large" target="_blank">Register! &raquo;</a>
             </div>
           </div><!-- /.plan -->
         </div>
