added sign up buttons

--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mushroom Learning -- We Teach Code!</title>
+  <title>Mushroom Learning -- Kids Coding Camp in Los Angeles</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting classes in Los Angeles, California.">
   <meta name="author" content="Muhammad Meigooni">
