--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,8 @@
 							<div class="hexagon"><i class="icon-cogs icon-4x"></i></div>
 							<h4>Workshops</h4>
 							<p>This is the mini portobello! Mushroom Learning's coding workshops give students a great introduction into the world of basic programming languages and web design. Topics include the skeleton of a website using HTML/CSS, and JavaScript.</p>
-							<a href="/workshops" class="btn btn-default btn-large">Learn more &raquo;</a>
+							<a href="/workshops" class="btn btn-default btn-large mushroom-menu-button">Learn more &raquo;</a>
+							<a href="http://bit.ly/coding-workshop" class="btn btn-default btn-large mushroom-menu-button" target="_blank">Sign up &raquo;</a>
 						</div>
 						<br class="spacer-lg">
 					</div>
@@ -168,7 +169,8 @@
 							<div class="hexagon"><i class="icon-sun icon-4x"></i></div>
 							<h4>Summer Camp</h4>
 							<p>This is the morel of our mushroom medley. Mushroom Learnings summer camp is a fun way to learn web design in an immersive educational environment and enjoy the summer with friends. In addition to coding, our camp includes fun unplugged games and artificial intelligence activities. </p>
-							<a href="summer-camp" class="btn btn-default btn-large">Learn more &raquo;</a>
+							<a href="summer-camp" class="btn btn-default btn-large mushroom-menu-button">Learn more &raquo;</a>
+							<a href="http://bit.ly/coding-la" class="btn btn-default btn-large mushroom-menu-button" target="_blank">Sign up &raquo;</a>
 						</div>
 						<br class="spacer-lg">
 					</div>
@@ -188,7 +190,8 @@
 							<div class="hexagon"><i class="icon-user icon-4x"></i></div>
 							<h4>Tutoring</h4>
 							<p>Our mentors will help your student design and execute on a web project. From scoping out the initial idea, to writing specifications, and finally producing the final product, the mentors will give individualized attention to any of the ideas that mushroom out of your imagination.</p>
-							<a href="/tutoring" class="btn btn-default btn-large">Learn more &raquo;</a>
+							<a href="/tutoring" class="btn btn-default btn-large mushroom-menu-button">Learn more &raquo;</a>
+							<a href="/tutoring" class="btn btn-default btn-large mushroom-menu-button">Sign up &raquo;</a>
 						</div>
 						<br class="spacer-lg">
 					</div>
