sign up buttons on index page

--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
 							<h4>Tutoring</h4>
 							<p>Our mentors will help your student design and execute on a web project. From scoping out the initial idea, to writing specifications, and finally producing the final product, the mentors will give individualized attention to any of the ideas that mushroom out of your imagination.</p>
 							<a href="/tutoring" class="btn btn-default btn-large mushroom-menu-button">Learn more &raquo;</a>
-							<a href="/tutoring" class="btn btn-default btn-large mushroom-menu-button">Sign up &raquo;</a>
+							<a href="/tutoring#pricing" class="btn btn-default btn-large mushroom-menu-button">Sign up &raquo;</a>
 						</div>
 						<br class="spacer-lg">
 					</div>
