seo changed h1s out

--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -136,7 +136,10 @@
             <div class="plan-info">
             </div>
             <div class="plan-price">
-              <h1>$349 <small>/week</small></h1>
+              <h2><small>INTRODUCTORY PRICE</small></h2>
+              <h2><span class="strike">$549</span> <small>/week</small></h2>
+              <h2 id="summer-price-size">$349 <small>/week</small></h2>
+
             </div>
             <ul class="plan-features">
               <li><i class="icon-ok"></i> Full day option</li>
