--- a/public/tutoring.html
+++ b/public/tutoring.html
@@ -82,13 +82,13 @@
       <div class="row">
         <div class="col-md-4">
           <div class="plan">
-            <div class="plan-name">
+            <div class="plan-name h2-resize-no-pad">
               <h3>10-hour package</h3>
             </div>
             <div class="plan-info">
             </div>
             <div class="plan-price">
-              <h1>$799</h1>
+              <h2 class="tutoring-price-size">$799</h2>
             </div>
             <ul class="plan-features">
               <li><i class="icon-ok"></i> Learn the fundamentals</li>
@@ -105,7 +105,7 @@
             <div class="plan-info">
             </div>
             <div class="plan-price">
-              <h1>$1399</h1>
+              <h2 class="tutoring-price-size">$1399</h2>
             </div>
             <ul class="plan-features">
               <li><i class="icon-ok"></i> Dive deeper into web development topics</li>
@@ -127,7 +127,7 @@
             <div class="plan-info">
             </div>
             <div class="plan-price">
-              <h1>$2399</h1>
+              <h2 class="tutoring-price-size">$2399</h1>
             </div>
             <ul class="plan-features">
               <li><i class="icon-ok"></i> Dig into the industry established frameworks</li>
