--- a/public/workshops.html
+++ b/public/workshops.html
@@ -81,7 +81,7 @@
               <p>Using Mozilla's X-Ray Goggles, students will learn how the skeleton of a website is structured. By the end of the workshop, students will understand basic HTML tags and also remix a website.</p>
             </div>
             <div class="plan-price">
-              <h1>Free!</h1>
+              <h2 class="tutoring-price-size">Free!</h2>
             </div>
             <ul class="plan-features">
               <li>Hosted after school and on weekends</li>
