--- a/public/index.html
+++ b/public/index.html
@@ -149,8 +149,8 @@
 		<section class="wrapper-lg" id="programs">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-12 text-center">
-						<h1>Mushroom Menu</h1>
+					<div class="col-lg-12 text-center h2-resize-no-pad">
+						<h2>Mushroom Menu</h2>
 						<p class="lead">Did you know there are around 100,000 species of fungi that have been formally identified?</p>
 						<br class="spacer-lg">
 					</div>
@@ -203,8 +203,8 @@
 		<section class="wrapper-lg bg-alt" id="testimonials">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-12 text-center">
-						<h1>Testimonials</h1>
+					<div class="col-lg-12 text-center h2-resize-no-pad">
+						<h2>Testimonials</h2>
 						<p class="lead">Who doesn't like a fungi?</p>
 					</div>
 					<div class="col-lg-4">
@@ -235,8 +235,8 @@
 		<section class="wrapper-lg" id="team">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-12 text-center">
-						<h1>Founding Team</h1>
+					<div class="col-lg-12 text-center h2-resize-no-pad">
+						<h2>Founding Team</h2>
 					</div>
 					<div class="col-lg-12">
 						<!--Team Members-->
