--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Mushroom Learning -- We Teach Code!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting classes in Los Angeles, California.">
+  <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We have classes and tutoring in Los Angeles, California.">
 	<meta name="author" content="Muhammad Meigooni">
 	<link rel="stylesheet" href="assets/styles/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/styles/css/font-awesome.css">
