--- a/public/summer-camp.html
+++ b/public/summer-camp.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Mushroom Learning -- Kids Coding Camp in Los Angeles</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting classes in Los Angeles, California.">
+  <meta name="description" content="Our coding summer camp is for middle schoolers in Los Angeles.">
   <meta name="author" content="Muhammad Meigooni">
 
   <!-- CSS -->
