--- a/public/tutoring.html
+++ b/public/tutoring.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Mushroom Learning -- Kids Coding Tutoring</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Welcome to Mushroom Learning! We teach kids to code in HTML, CSS, and JavaScript. We are hosting classes in Los Angeles, California.">
+  <meta name="description" content="Challenging time constraints? Have an advance student? Want personalized attention? Private tutoring is our most effective option for students.">
   <meta name="author" content="Muhammad Meigooni">
 
   <!-- CSS -->
